--- a/css/index.css
+++ b/css/index.css
@@ -279,6 +279,7 @@ footer img {
   text-align: center;
   border: 3px solid #076d0b;
   font-size: .9em;
+  box-shadow: 0 0 5px #333;
 }
 
 .container nav a:hover p {
